--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Charles II, King of England, 1630-1685'
 - !lcc 'DA'
+- GITenberg
 title: History of King Charles the Second of England
 url: http://www.gutenberg.org/ebooks/6659
